complete almost function in homepage